<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
<TableLayout
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:stretchColumns="2"
android:padding="10dip">
<TableRow>

<TextView
    android:id="@+id/from"
    android:text="@string/from_txt"
    android:textSize="18sp" />

</TableRow>

<Spinner android:id="@+id/from_nc" />

<TextView
    android:id="@+id/to"
    android:text="@string/to_txt"
    android:textSize="18sp" />

<Spinner android:id="@+id/to_nc" />

<EditText
android:id="@+id/insert_txt"
android:padding="10dip"
android:textSize="22sp"
android:hint="@string/hint_txt"/>

<TextView
    android:id="@+id/result"
    android:text="@string/result_txt_label"
    android:textSize="22sp" />

<TextView
    android:id="@+id/result_txt"
    android:padding="10dip"
    android:textColor="#82c300"
    android:textSize="22sp" />

<Button
    android:id="@+id/convert_btn"
    android:text="@string/convert_label" />

<TableRow>
</TableRow>

<Button
    android:id="@+id/clear_btn"
    android:text="@string/clear_label" />

</TableLayout>
</LinearLayout>
